--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,12 +1,12 @@
 //colors in project 
-$color-bg:#cacace;
-$color-dark:#2b2929;
+$color-bg:#f0e6e6;
 $color-bordered:#a0f39d;
-$color-btn:#267eb8;
+$color-btn:#57b6f5;
+$color-form:#f0f0f0;
 
 //sizes in project
 $width-burger:6vw;
-$height-burger:1vw;
+$height-burger:.6vw;
 $space-bar:2vw;
 $brd-radius:10px;
 
