--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -39,14 +39,80 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 90vh;
+        min-height: 90vh;
         width: 100%;        
         .formFill{
             background-color: $color-form;
-            width: 40%;
-            height: 70%;
+            min-width: 40vw;
+            min-height: 60vh;
             border-radius: 10px;
-            box-shadow: .5vw .5vw 10vw  rgba(0,0,0,.6)
+            box-shadow: .5vw .5vw 3vw  $color-btn;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2vw;
+            margin-bottom: 3vw;
+            .formFill__btn{
+                margin:10% 0;
+                font-size: .5em;
+                &:hover::after{
+                    color: #2d2d2d;
+                }
+            }
+            .formFill__title{
+                color:$color-btn;
+                font-size: 1.2em;
+                margin-bottom: 10%; 
+                             
+            }
+            .formFill__err{
+                color: red;
+                font-weight: bold;
+                width: 100%;
+                height: 2vw;
+            }
+            .formFill__option{
+                margin: 5% 0;                
+                font-size: .6em;
+                align-self: flex-start;
+                display: flex;
+                justify-content: flex-end; 
+                align-items: center;               
+                &.option_line{
+                    width: 100%;
+                    margin-right:0;
+                    padding-right: 10vw;
+                }
+                .option__txt{
+                    margin-left: 1vw;
+                    box-shadow: .5vw .5vw 1.5vw  $color-btn;
+                    border: none;                    
+                    border-radius:2px;
+                    width: 15vw;
+                    height: 2vw;
+                    
+                }
+                .option_input{
+                    position: relative;                 
+                    margin-right: 1vw;
+                    &:after{
+                        content: '';
+                        position: absolute;
+                        display: block;
+                        top: 0;
+                        left:0;
+                        width: 100%;
+                        height: 100%;
+                        transition: .3s background-color;
+                        background-color: $color-bg;
+                        border: 2px solid $color-btn;
+                    }
+                    &:checked::after{
+                        background-color: $color-btn;
+                         
+                    }
+                }
+            }
         }
         .main__section__title{
             color: $color-btn;
