Create removeTourist component and downoload data from backend

--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 .5vw .6vw rgba(0,0,0,.4);
    .header_main__button_invite{
     font-size: 1.4em;    
     word-spacing: .8vw;
