--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -40,7 +40,11 @@
         justify-content: center;
         align-items: center;
         min-height: 90vh;
-        width: 100%;        
+        width: 100%;  
+        .main__section__ok {
+            width: 10vw;
+            height: 10vw;
+        }     
         .formFill{
             background-color: $color-form;
             min-width: 40vw;
@@ -51,7 +55,17 @@
             flex-direction: column;
             align-items: center;
             padding: 2vw;
-            margin-bottom: 3vw;
+            margin-bottom: 1.5vw;
+            .formFill__result{
+                align-self: flex-start;
+                display: flex;
+                flex-direction: column;                
+                margin-top: 3vw;
+                .result__desc{
+                    border-bottom: 2px solid $color-btn;
+                    padding: 1vw 2vw;
+                }
+            }
             .formFill__btn{
                 margin:10% 0;
                 font-size: .5em;
@@ -90,7 +104,7 @@
                     border-radius:2px;
                     width: 15vw;
                     height: 2vw;
-                    
+                    font-weight: 700;
                 }
                 .option_input{
                     position: relative;                 
